--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,18 +1,67 @@
 {% extends "account/base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 
 {% load i18n %}
 {% load account socialaccount %}
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
-
+{% block styles %}
+<link rel="stylesheet" href="{% static '/css/login.css' %}">
+{% endblock %}
 {% block content %}
-
-<h1>{% trans "Sign In" %}</h1>
 
 {% get_providers as socialaccount_providers %}
 
-{% if socialaccount_providers %}
+
+
+<!-- <div class="container">
+
+<form class="login" method="POST" action="{% url 'account_login' %}">
+  {% csrf_token %}
+  {{ form|crispy }}
+  {% if redirect_field_value %}
+  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+  {% endif %}
+  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+  <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
+</form>
+
+</div> -->
+<div class="container main">
+
+  <div class="row">
+      <div class="col-md-6">
+          <img src="{% static 'image/login.png' %}" class="image-one-clik" alt="">
+      </div>
+      <div class="col-md-1"></div>
+      <div class="col-md-4 p-2">
+          <div class="login">
+          <h2 class="fw-bold">{% trans "Log in" %}</h2>
+          <form class="login" method="POST" action="{% url 'account_login' %}">
+            {% csrf_token %}
+            {{ form|crispy }}
+            {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+            {% endif %}
+              <!-- <div class="mb-3">
+                  <input type="email" class="form-control  form-control-lg rounded" id="formGroupExampleInput2"
+                      placeholder="Email Id">
+              </div>
+              <div class="mb-3">
+                  <input type="password" class="form-control  form-control-lg rounded" id="formGroupExampleInput2"
+                      placeholder="Password">
+              </div> -->
+              <div class="mb-3">
+                  <a href="{% url 'account_reset_password' %}" class="text-decoration-none h6 "> Forget account ?</a>
+              </div>
+              <div class="d-grid">
+                  <button class="btn btn-primary btn" type="submit">{% trans "Log In" %}</button>
+              </div>
+
+              <div class="mt-3 text-center">
+                  <h6>
+                    {% if socialaccount_providers %}
 <p>{% blocktrans with site.name as site_name %}Please sign in with one
 of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
 for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
@@ -30,21 +79,23 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 {% include "socialaccount/snippets/login_extra.html" %}
 
 {% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+<p>{% blocktrans %}Don't have account ? 
+  <a href="{{ signup_url }}" class="text-decoration-none"> Sign up</a>{% endblocktrans %}</p>
 {% endif %}
+                      
 
-<div class="container">
+                  </h6>
 
-<form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form|crispy }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
-</form>
+              </div>
+          </form>
+      </div>
+      </div>
+      <div class="col-md-1">
+
+      </div>
+  </div>
+
+
 
 </div>
 
