--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -7,18 +7,29 @@
 
 {% block content %}
 
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
-
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+  <div class="container mt-5">
+      <div class="row">
+          <div class="col-md-3"></div>
+          <div class="col-md-6 mt-5 border rounded p-3">
+            <h2 class="fw-bold">{% trans "Password Reset" %}</h2>
+            {% if user.is_authenticated %}
+            {% include "account/snippets/already_logged_in.html" %}
+            {% endif %}
+        
+            <p>{% trans "Forgotten your password?" %}</p>
+            <p class="pb-2">
+                Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it.
+            </p>
+        
+            <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" class="btn btn-secondary mx-auto" value="{% trans 'Reset My Password' %}" />
+            </form>
+        
+            <p class="fw-bold mt-2">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+          </div>
+          <div class="col-md-3"></div>
+      </div>
+  </div>
 {% endblock %}
