--- a/frontend/templates/frontend/about.html
+++ b/frontend/templates/frontend/about.html
@@ -60,7 +60,7 @@
     
                     </div>
                 </div>
-                <div class="image-wrapper">
+                <!-- <div class="image-wrapper">
                     <img src="{% static 'image/ravi.jpg' %}" class="vis" alt="">
                     <div class="image-caption">
                         <p> <a href="#"><i class="bi bi-instagram"
@@ -73,7 +73,7 @@
                         </p>
     
                     </div>
-                </div>
+                </div> -->
                 <div class="image-wrapper">
                     <img src="{% static 'image/akku.jpg' %}" class="vis" alt="">
                     <div class="image-caption">
@@ -90,7 +90,7 @@
                 </div>
                 <div class="image-wrapper">
                     <img src="{% static 'image/mukund.jpg'  %}" class="vis" alt="">
-                    <div class="image-caption">
+                    <div class="image-caption">s
                         <p> <a href="#"><i class="bi bi-instagram"
                                     style="font-size: 1.5rem; color: rgb(33, 34, 36);"></i></a>
     
