--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -32,7 +32,7 @@
                     here.
                 </p>
             </div>
-       
+
             <a class="btn  cst-primary btn-lg mt-2" href="{% url 'courses'  %}">GET STARTED</a>
         </div>
         <div class="col-md-6 col-lg-6 text-center">
@@ -94,7 +94,7 @@
                 <p>
                     Programming
                 </p>
-               
+
                 <a class="btn  cst-white btn-lg mt-2" href="{% url 'courses'  %}">Unlock the Experience</a>
             </div>
 
@@ -113,42 +113,79 @@
                 <h1>DAILY UPDATES</h1>
             </div>
             <div class="row row-cols-1 row-cols-md-3 g-3 mt-5 mb-3">
+             
                 <div class="col">
                     <div class="card border-0">
-                        <img src="https://source.unsplash.com/200x100/?nature,student" class="card-img-top" alt="...">
+
+                        <iframe width="325" height="200" src="https://www.youtube.com/embed/0-Sxa6qbwpU"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                         <div class="card-body">
-                            <h5 class="card-title h4">Why Soft waist-band?</h5>
-                            <p class="cst-color-blue fw-bold">Date | Time </p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural
-                                lead-in to additional content. This content is a little bit longer.</p>
-                            <button type="button" class="btn btn-outline-dark rounded-0">READ MORE</button>
+
+                            <h5 class="card-title h4">
+                                Dell Hiring 2021
+                            </h5>
+                            <p class="cst-color-blue fw-bold">
+
+                            </p>
+                            <p class="card-text">
+
+                            </p>
+
+                            
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card border-0">
-                        <img src="https://source.unsplash.com/200x100/?college" class="card-img-top" alt="...">
+
+                        <iframe width="325" height="200" src="https://www.youtube.com/embed/1O_yCoW2Z2s"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                         <div class="card-body">
-                            <h5 class="card-title h4">Why Soft waist-band?</h5>
-                            <p class="cst-color-blue fw-bold">Date | Time </p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural
-                                lead-in to additional content. This content is a little bit longer.</p>
-                            <button type="button" class="btn btn-outline-dark rounded-0">READ MORE</button>
+
+                            <h5 class="card-title h4">
+                                Accenture Recruitment 2021
+                            </h5>
+                            <p class="cst-color-blue fw-bold">
+
+                            </p>
+                            <p class="card-text">
+
+                            </p>
+
+                            
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card border-0">
-                        <img src="https://source.unsplash.com/200x100/?teacher" class="card-img-top" alt="...">
+
+                        <iframe width="325" height="200" src="https://www.youtube.com/embed/DxkT1YxCCPk"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                         <div class="card-body">
-                            <h5 class="card-title h4">Why Soft waist-band?</h5>
-                            <p class="cst-color-blue fw-bold">Date | Time </p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural
-                                lead-in to additional content.</p>
-                            <button type="button" class="btn btn-outline-dark rounded-0">READ MORE</button>
+
+                            <h5 class="card-title h4">
+                                Cisco Off Campus Recruitment 2021
+                            </h5>
+                            <p class="cst-color-blue fw-bold">
+
+                            </p>
+                            <p class="card-text">
+
+                            </p>
+
+                            
                         </div>
                     </div>
                 </div>
+
+
+
 
             </div>
         </div>
@@ -165,18 +202,17 @@
                     <div id="owl-demo" class="owl-carousel owl-theme">
 
                         <div class="item mt-5 text-center pt-3">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ab labore, facere
-                                delectus adipisci sint dolore quasi, est aspernatur tenetur consectetur corporis ex
-                                minima quidem consequatur debitis amet? Architecto, fuga!</p>
+                            <p> I'm Pooja Gramopadhye i'm final year BTech student. I have following your YouTube
+                                channel since long, and it has helped in number of ways.</p>
                             <p class="h5 text-center pt-3">
-                                unknown
+                                Pooja Gramopadhye
                             </p>
 
                             <p class="text-muted">
-                                bot
+                                BTech student
                             </p>
                         </div>
-                        <div class="item mt-5 text-center pt-3">
+                        <!-- <div class="item mt-5 text-center pt-3">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non voluptas, ipsum
                                 reiciendis, quo maiores hic rerum in accusamus maxime porro nesciunt tempore sed
                                 suscipit sapiente, aliquid doloribus. Inventore, esse rerum?</p>
@@ -199,7 +235,7 @@
                             <p class="text-muted">
                                 bot
                             </p>
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
@@ -221,7 +257,7 @@
                 <div class="image-wrapper">
                     <img src="{% static 'image/vis.jpg' %}" class="vis" alt="">
                     <div class="image-caption">
-                        <p> <a href="#"><i class="bi bi-instagram"
+                        <p> <a href="https://www.instagram.com/v_i_e_s_s_e/" target="_black"><i class="bi bi-instagram"
                                     style="font-size: 1.5rem; color: rgb(33, 34, 36);"></i></a>
 
                             <a href="#"><i class="bi bi-linkedin"
@@ -245,12 +281,12 @@
 
 
                     <div class="image-caption">
-                        <p> <a href="#"><i class="bi bi-instagram"
-                                    style="font-size: 1.5rem; color: rgb(33, 34, 36);"></i></a>
+                        <p> <a href="https://www.instagram.com/mani_chauhan98/" target="_black"><i
+                                    class="bi bi-instagram" style="font-size: 1.5rem; color: rgb(33, 34, 36);"></i></a>
 
-                            <a href="#"><i class="bi bi-linkedin"
-                                    style="font-size: 1.5rem; color: rgb(33, 34, 36);"></i></a>
-                            <a href="#"><i class="bi bi-youtube"
+                            <a href="https://www.linkedin.com/in/manish-chauhan-a89aa0152" target="_black"><i
+                                    class="bi bi-linkedin" style="font-size: 1.5rem; color: rgb(33, 34, 36);"></i></a>
+                            <a href="https://twitter.com/ManishC24938719?s=08" target="_black"><i class="bi bi-twitter"
                                     style="font-size: 1.5rem; color: rgb(33, 34, 36);"></i></a>
                         </p>
 
@@ -265,16 +301,16 @@
 
             </div>
 
-            <div class="image">
+            <!-- <div class="image">
                 <div class="image-wrapper">
                     <img src="{% static 'image/ravi.jpg' %}" class="vis" alt="">
                     <div class="image-caption">
-                        <p> <a href="#"><i class="bi bi-instagram"
+                        <p> <a href="https://www.instagram.com/guptaravi540/" target="_black"><i class="bi bi-instagram"
                                     style="font-size: 1.5rem; color: rgb(33, 34, 36);"></i></a>
 
-                            <a href="#"><i class="bi bi-linkedin"
+                            <a href="https://www.linkedin.com/in/guptaravi540" target="_black"><i class="bi bi-linkedin"
                                     style="font-size: 1.5rem; color: rgb(33, 34, 36);"></i></a>
-                            <a href="#"><i class="bi bi-youtube"
+                            <a href="https://twitter.com/guptaravi540" target="_black"><i class="bi bi-twitter"
                                     style="font-size: 1.5rem; color: rgb(33, 34, 36);"></i></a>
                         </p>
 
@@ -285,7 +321,7 @@
                     <p class="text-muted  m-0">(Co-founder)</p>
                     <p class="text-muted m-0 ">E-learning Developer</p>
                 </div>
-            </div>
+            </div> -->
             <div class="image">
                 <div class="image-wrapper">
                     <img src="{% static 'image/akku.jpg' %}" class="vis" alt="">
@@ -327,7 +363,7 @@
                     <p class="text-muted  m-0">(Media Developer)</p>
                     <p class="text-muted m-0 ">Graphic Designer</p>
                 </div>
-                
+
             </div>
         </div>
     </div>
