--- a/jobs/templates/jobs/index.html
+++ b/jobs/templates/jobs/index.html
@@ -16,44 +16,27 @@
 
    <div class="row">
        <div class="col-md-12">
-        <div class="row row-cols-1 row-cols-md-3 g-3 mt-2 mb-3">
+        <div class="row row-cols-1 row-cols-md-3 g-3 mt-5 mb-3">
+        {% for iteam in jobs %}
             <div class="col">
                 <div class="card border-0">
-                    <img src="https://source.unsplash.com/200x100/?nature,student" class="card-img-top"
-                        alt="...">
+
+                    {{iteam.link|safe}}
                     <div class="card-body">
-                        <h5 class="card-title h4">Why Soft waist-band?</h5>
-                        <p class="cst-color-blue fw-bold">Date | Time </p>
-                        <p class="card-text">This is a longer card with supporting text below as a natural
-                            lead-in to additional content. This content is a little bit longer.</p>
-                        <button type="button" class="btn btn-outline-dark rounded-0">READ MORE</button>
+                        <h5 class="card-title h4">{{iteam.title}}</h5>
+                        <p class="cst-color-blue fw-bold">{{iteam.date|date:"M d,Y"}}
+                        </p>
+                        <p class="card-text">{{iteam.job_details}}</p>
+                        {% if iteam.job_link %}
+                        <a type="button" class="btn btn-outline-dark rounded-0" href="{{iteam.job_link}}" target="_blank">Apply Now</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card border-0">
-                    <img src="https://source.unsplash.com/200x100/?college" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title h4">Why Soft waist-band?</h5>
-                        <p class="cst-color-blue fw-bold">Date | Time </p>
-                        <p class="card-text">This is a longer card with supporting text below as a natural
-                            lead-in to additional content. This content is a little bit longer.</p>
-                        <button type="button" class="btn btn-outline-dark rounded-0">READ MORE</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card border-0">
-                    <img src="https://source.unsplash.com/200x100/?teacher" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title h4">Why Soft waist-band?</h5>
-                        <p class="cst-color-blue fw-bold">Date | Time </p>
-                        <p class="card-text">This is a longer card with supporting text below as a natural
-                            lead-in to additional content.</p>
-                        <button type="button" class="btn btn-outline-dark rounded-0">READ MORE</button>
-                    </div>
-                </div>
-            </div>
+        {% endfor %}
+
+        
+          
 
         </div>
        </div>
