--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -66,12 +66,12 @@
             <a class="btn btn-outline-success mt-2" href="{% url 'account_login'  %}">LOGIN</a>
             {% endif %}
             <ul class="navbar-nav cst-nav  mb-2 mb-lg-0">
-                <li class="nav-item"><a href="#" class="nav-link"><i class="bi bi-instagram"
+                <li class="nav-item"><a href="https://www.instagram.com/vamm_academy" target="_black" class="nav-link"><i class="bi bi-instagram"
                             style="font-size: 1.5rem; color: rgb(33, 34, 36);"></i></a></li>
 
-                <li class="nav-item"><a href="#" class="nav-link"><i class="bi bi-linkedin"
+                <li class="nav-item"><a href="#" target="_black" class="nav-link"><i class="bi bi-linkedin"
                             style="font-size: 1.5rem; color: rgb(33, 34, 36);"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><i class="bi bi-youtube"
+                <li class="nav-item"><a href="https://www.youtube.com/c/vammacademy" target="_black" class="nav-link"><i class="bi bi-youtube"
                             style="font-size: 1.5rem; color: rgb(33, 34, 36);"></i></a></li>
 
 
@@ -88,7 +88,7 @@
     {% if messages %}
     <div class="container">
     <div class="alert alert-success alert-dismissible fade show" role="alert">
-      <strong>Messages</strong>  {% for message in messages %}
+        {% for message in messages %}
       {{message}}
       {% endfor %}
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -123,7 +123,7 @@
         integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
         crossorigin="anonymous"></script>
       <script>
-        $(".alert").delay(4000).fadeOut(200, function() {
+        $(".alert").delay(2000).fadeOut(200, function() {
     $(this).alert('close');
 });
       </script>
